downgraded to jdk18 to support mockito